# Smart-Sentry

./: .gitignore  PROJECT_CONTEXT.md  README.md  Smart Sentry Dashboard (offline).html  enroll.py
Blonky/: CMakeLists.txt  prj.conf
Blonky/src/: cs_initiator.c  cs_initiator.h  main.c
blinky/: CMakeLists.txt  README.rst  VERSION  prj.conf  sysbuild.conf
blinky/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
blinky/keys/: README.md  ss1_mcuboot_prod_pub.pem
blinky/releases/ss1_ota/: README.md  ss1_bootstrap_1.0.1.hex  ss1_bootstrap_1.0.3.hex  ss1_update_1.0.2_manifest.json  ss1_update_1.0.3_manifest.json  ss1_update_1.0.4_manifest.json
blinky/src/: aux_uart.c  aux_uart.h  cs_reflector.c  cs_reflector.h  main.c  sentry_auth.c  sentry_auth.h  serial30_mux.c  serial30_mux.h
blinky/sysbuild/: mcuboot.conf
clients/: 1001_gateway-lab_meta.json  1002_gateway-lab_meta.json
docs/: ota-auth-and-device-id.md  sensor-modes.md
sentry_app/: README.md  agent_driver.py  agent_process.py  backend.py  ble_driver.py  creds.example.py  fake_driver.py  main.py  requirements-pi.txt  requirements.txt
sentry_app/firmware/ss1_update_1.0.15/: README.md  manifest.json
sentry_app/firmware/ss1_update_1.0.16/: README.md  manifest.json
sentry_app/firmware/ss1_update_1.0.5/: README.md  manifest.json  ss1_1.0.5_bootstrap.hex
sentry_app/firmware/ss1_update_1.0.6/: README.md  manifest.json
sentry_app/qml/: Main.qml
sentry_app/sentry_agent/: agent_main.py  auth.py  cli.py  fleet.py  inventory.py  ipc.py  ota.py  releases.py  session.py
sentry_app/systemd/: sentry-agent.service
(+4 files in other folders)
